Bug fix - Delete portal preferences when repository is deleted

--- a/fsrepo/src/main/resources/portal.properties
+++ b/fsrepo/src/main/resources/portal.properties
@@ -1,1 +1,2 @@
 dl.repository.impl=cz.topolik.fsrepo.LocalFileSystemRepository
+value.object.listener.com.liferay.portal.model.Repository=cz.topolik.fsrepo.RepositoryModelListener
