Possibility to force indexing on startup

--- a/fsrepo/src/main/resources/portal.properties
+++ b/fsrepo/src/main/resources/portal.properties
@@ -1,2 +1,3 @@
 dl.repository.impl=cz.topolik.fsrepo.LocalFileSystemRepository
 value.object.listener.com.liferay.portal.model.Repository=cz.topolik.fsrepo.RepositoryModelListener
+application.startup.events=cz.topolik.fsrepo.RepositoryStartupAction
