--- a/fsrepo/pom.xml
+++ b/fsrepo/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>fsrepo</artifactId>
     <packaging>war</packaging>
     <name>fsrepo Hook</name>
-    <version>1.1-SNAPSHOT</version>
+    <version>1.1</version>
     <build>
         <finalName>${artifactId}-${version}-hook</finalName>
         <plugins>
