--- a/fsrepo/src/main/webapp/WEB-INF/liferay-plugin-package.properties
+++ b/fsrepo/src/main/webapp/WEB-INF/liferay-plugin-package.properties
@@ -1,5 +1,5 @@
-name=File system repository
-module-group-id=cz.topolik
+name=File System Repository
+module-group-id=cz.topolik.liferay
 module-incremental-version=1
 tags=
 short-description=Documents and Media repository for accessing local file system
