--- a/fsrepo/pom.xml
+++ b/fsrepo/pom.xml
@@ -2,13 +2,13 @@
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>cz.topolik</groupId>
+    <groupId>cz.topolik.liferay</groupId>
     <artifactId>fsrepo</artifactId>
     <packaging>war</packaging>
-    <name>fsrepo Hook</name>
-    <version>1.3</version>
+    <name>FSRepo Hook</name>
+    <version>2.0</version>
     <build>
-        <finalName>${artifactId}-hook-${liferay.version}.3</finalName>
+        <finalName>${artifactId}-hook-${liferay.version}.0</finalName>
         <plugins>
             <plugin>
                 <groupId>com.liferay.maven.plugins</groupId>
