--- a/fsrepo/src/main/resources/portal.properties
+++ b/fsrepo/src/main/resources/portal.properties
@@ -1,3 +1,3 @@
-dl.repository.impl=cz.topolik.fsrepo.LocalFileSystemRepository
-value.object.listener.com.liferay.portal.model.RepositoryEntry=cz.topolik.fsrepo.RepositoryEntryModelListener
-application.startup.events=cz.topolik.fsrepo.RepositoryStartupAction
+dl.repository.impl=cz.topolik.liferay.fsrepo.FSRepoRepositoryImpl
+#value.object.listener.com.liferay.portal.model.RepositoryEntry=cz.topolik.fsrepo.RepositoryEntryModelListener
+#application.startup.events=cz.topolik.fsrepo.RepositoryStartupAction
