--- a/fsrepo/src/main/resources/content/Language.properties
+++ b/fsrepo/src/main/resources/content/Language.properties
@@ -1,3 +1,3 @@
-model.resource.cz.topolik.fsrepo.LocalFileSystemRepository=File System Repository
+model.resource.cz.topolik.liferay.fsrepo.FSRepoRepositoryImpl=File System Repository
 add-group-permissions=Add Site Members Permissions \[true|false\]: (default: true)
 add-guest-permissions=Add Guest Permissions \[\<b\>true</b>|false\]: (default: true)
