--- a/fsrepo/pom.xml
+++ b/fsrepo/pom.xml
@@ -83,6 +83,6 @@
     </dependencies>
     <properties>
         <liferay.auto.deploy.dir>/opt/liferay.git/bundles/tomcat-7.0.25</liferay.auto.deploy.dir>
-        <liferay.version>6.1.0</liferay.version>
+        <liferay.version>6.2.0-RC5</liferay.version>
     </properties>
 </project>
